doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster
-source
11
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.2.6.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;E:\Users\Dhan\Documents\Greenfoot\TubrukMaster
-d
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
TubrukMaster
-windowtitle
TubrukMaster
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/lv1.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/pintu2.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/pintu3.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/lv3.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/pintuan.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/lv2.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/tombol.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/pintu.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/tembok.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/objek.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/finish.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/front.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/groupLevel.java
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster/player.java
<---- end of javadoc command ---->
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\lv1.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\pintu2.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\pintu3.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\lv3.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\pintuan.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\lv2.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\tombol.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\pintu.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\tembok.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\objek.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\finish.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\front.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\groupLevel.java...
Loading source file E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\player.java...
E:\Users\Dhan\Documents\Greenfoot\TubrukMaster\player.java:112: error: illegal start of expression
}
^
1 error
